# rx-pagemarker

./: .gitignore  CHANGELOG.md  CLAUDE.md  QUICK_START.md  README.md  SNIPPET_GUIDE.md  VISUAL_EXAMPLE.md  frontmatter_template.json  generate_template.py  page_marker.py  page_references.json  pyproject.toml  setup.sh
examples/: README.md  page_references_example.json  sample_book.html  sample_with_markers.html
src/rx_pagemarker/: __init__.py  __main__.py  cli.py  html_matcher.py  marker.py  pdf_extractor.py  template.py  word_segmentation.py
src/rx_pagemarker/data/: __init__.py  greek_words.txt
tests/: __init__.py  test_cli.py  test_marker.py  test_pdf_extractor.py  test_template.py
tools/: page-marker-editor.html
